makes video responsive

--- a/_posts/2013-05-12-sails.md
+++ b/_posts/2013-05-12-sails.md
@@ -67,12 +67,12 @@ Laminated sails are made of fibers laid out and held together by glueing them be
 
 Hence, all race boats use laminated sails, most cruising boats use woven sails, although the number of cruisers carrying laminated sails is increasing. The most popular brand is North Sails with their newest line called 3Di used by most racers:
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/J2riGIURhAU?rel=0" frameborder="0" allowfullscreen></iframe>
+<div class="video-container video-16-9"><iframe src="http://www.youtube.com/embed/J2riGIURhAU?rel=0" frameborder="0" allowfullscreen></iframe></div>
 
 ## Different sails
 
 There are many other types and shapes of sails, especially in older and/or big boats. Here's the [Maltese Falcon](http://www.symaltesefalcon.com/) with its [DynaRig](http://www.symaltesefalcon.com/design-concepts.php).
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/IYySluFUyRw?rel=0" frameborder="0" allowfullscreen></iframe>
+<div class="video-container video-16-9"><iframe src="http://www.youtube.com/embed/IYySluFUyRw?rel=0" frameborder="0" allowfullscreen></iframe></div>
 
 As usual, this post is only scratching on the surface of the topic, but I hope it suffices as an introduction. More to come.
